--- a/launchPad.css
+++ b/launchPad.css
@@ -5,6 +5,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background-color: #232323;
 }
 .row {
   display: flex;
