--- a/launchPad.css
+++ b/launchPad.css
@@ -1,10 +1,11 @@
 body {
-  /* margin-top: 20vh; */
+  margin-top: 7vh;
   height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background-color: #232323;
 }
 .row {
   display: flex;
